trunk/Archive2/88/40ea194ad6ef1b/output
main.cpp: In instantiation of 'void test() [with bool B = false]':							main.cpp: In instantiation of 'void test() [with bool B = false]':
main.cpp:22:17:	  required from here											main.cpp:22:17:	  required from here
main.cpp:15:22: error: size of array is negative									main.cpp:7:34: error: static assertion failed: types_must_match
     STATIC_ASSERT(B, types_must_match);										 #define STATIC_ASSERT(expr, msg) static_assert(expr, #msg)
		      ^																	  ^
main.cpp:3:46: note: in definition of macro 'STATIC_ASSERT'								main.cpp:15:5: note: in expansion of macro 'STATIC_ASSERT'
 #define STATIC_ASSERT(expr, msg) typedef int msg[(expr) ? 1 : -1];							     STATIC_ASSERT(B, types_must_match);
					      ^										     ^
